# compiler

./: .gitignore  CMakeLists.txt  Lexer.cpp  main.cpp
outputs/: test1_result.txt
src/: CodeGen.cpp  CodeGen.h  Compiler.cpp  Compiler.h  IR.cpp  IR.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Reg.cpp  Reg.h  SymbolTable.cpp  SymbolTable.h  Token.cpp  Token.h  constants.cpp  constants.h  main.cpp  nameof.h  utils.cpp  utils.h
tests/: test1.cpp  test1.txt
